assets/css/style.css
:root {
    /* Primary color variables */
    --primary-color: #56a5eb;
    --primary-color-dark: #007bff;
    --primary-text-color: #333;
    --score-color: #5cb85c;

    /* Spacing variables */
    --spacing-small: 0.5rem;
    --spacing-medium: 1rem;
    --spacing-large: 2rem;
    --font-size-normal: 1rem;
    --font-size-large: 1.2rem;
}

/* Reset margin and padding for all elements */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Body styles */
body {
    font-family: Arial, sans-serif;
    color: var(--primary-text-color);
    line-height: 1.6;
    background-color: #f4f4f4;
}

/* Header styles */
header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 var(--spacing-medium);
    background-color: var(--primary-color-light);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

/* Heading styles */
.heading a {
    text-decoration: none;
    color: var(--primary-text-color);
    font-size: 1.5rem;
}

/* Profile Icon styles */
.profile-icon {
    font-size: 1.5rem;
    color: var(--primary-text-color);
    cursor: pointer;
}

/* Menu Icon styles */
.menu-icon {
    font-size: 1.5rem;
    cursor: pointer;
}

/* Quiz Intro section styles */
.quiz-intro {
    background-color: var(--primary-color-light);
    padding: 2rem;
    text-align: center;
    border-radius: 10px;
    margin: 2rem auto;
    max-width: 800px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.quiz-intro h2 {
    color: var(--primary-color-dark);
    margin-bottom: 1rem;
    font-size: 2rem;
}

.quiz-intro p {
    color: var(--primary-text-color);
    font-size: 1.2rem;
}

/* Quiz interface and category selection styles */
#quiz-interface,
#category-selection {
    background-color: #f0f0f0;
    padding: var(--spacing-large);
    border-radius: 10px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    margin: var(--spacing-large) auto;
    max-width: 800px;
    text-align: center;
}

#category-selection h2 {
    margin-bottom: var(--spacing-medium);
}

#quiz-interface.hidden,
#results.hidden {
    display: none;
}

/* Instructions paragraph styles */
.instructions {
    font-size: var(--font-size-normal);
    color: var(--primary-text-color);
    margin-bottom: var(--spacing-small);
}

/* Start Quiz */
#start-quiz {
    background-color: var(--primary-color-dark);
    color: white;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    font-size: 1.2rem;
    cursor: pointer;
    transition: background-color 0.3s ease;
    margin-top: 1rem;
    margin-bottom: 1rem;
}

#start-quiz:hover {
    background-color: var(--primary-color);
}

/* Button */
button {
    padding: var(--spacing-small) var(--spacing-medium);
    font-size: var(--font-size-normal);
}

/* Progress bar styles */
#progressBar-container {
    background-color: #e0e0e0;
    border-radius: 5px;
    margin: var(--spacing-medium) 0;
}

#progress-bar {
    height: 20px;
    background-color: var(--score-color);
    border-radius: 5px;
}

/* Score container styles */
#score-container {
    font-size: 1.2rem;
    margin-bottom: 2rem;
    display: none;
}

/* Category buttons styles */
.category-buttons {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: var(--spacing-medium);
}

.category-btn {
    padding: var(--spacing-small) var(--spacing-large);
    background-color: var(--primary-color-dark);
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 1rem;
    transition: opacity 0.3s;
}

.category-btn:hover {
    opacity: 0.8;
}

.category-btn i {
    margin-right: var(--spacing-small);
}

/* Answer choices container styles */
#answerChoices {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 1rem;
    text-align: center;
    margin-top: var(--spacing-medium);
}

.answer-button {
    padding: 0.5rem 1rem;
    background-color: var(--primary-color-dark);
    color: white;
    border: none;
    border-radius: 5px;
    font-size: 1rem;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.answer-button:hover {
    background-color: #45a049;
}

/* Correct and Incorrect Answer Button Styles */
.correct-answer {
    background-color: #28a745;
    /* Green color for correct answers */
    color: white;
}

.incorrect-answer {
    background-color: #dc3545;
    /* Red color for incorrect answers */
    color: white;
}

/* General Hidden Class */
.hidden {
    display: none;
}

/* Next Question styles */

#next-question {
    background-color: var(--primary-color-dark);
    color: white;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    font-size: 1.2rem;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

#next-question:hover {
    background-color: var(--primary-color);
}

/* Results section styles */
#results {
    background-color: white;
    padding: var(--spacing-large);
    width: 80%;
    margin: 2rem auto;
    text-align: center;
    border-radius: 5px;
    font-size: var(--font-size-large);
}

/* Button styles for results */
#results button {
    padding: var(--spacing-small) var(--spacing-medium);
    margin: var(--spacing-small);
    background-color: var(--primary-color-dark);
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
}

#results button:hover {
    opacity: 0.8;
}

/* Larger screens */
@media (min-width: 768px) {
    header {
        padding: 0 var(--spacing-large);
    }

    .category-buttons {
        flex-direction: column;
    }

    .menu-icon {
        display: none;
    }

    #quiz-interface,
    #results {
        width: 60%;
    }
}

